[build-system]
requires = ["pbr>=6.1.1"]
build-backend = "pbr.build"

[project]
name = "pycadf"
description = "CADF Library"
authors = [
    {name = "OpenStack", email = "openstack-discuss@lists.openstack.org"},
]
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {text = "Apache-2.0"}
dynamic = ["version", "dependencies"]
requires-python = ">=3.10"
classifiers = [
    "Environment :: OpenStack",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://docs.openstack.org/pycadf"
Repository = "https://opendev.org/openstack/pycadf"

[tool.setuptools]
packages = [
    "pycadf"
]

[tool.setuptools.data-files]
"etc/pycadf" = [
    "etc/pycadf/cinder_api_audit_map.conf",
    "etc/pycadf/glance_api_audit_map.conf",
    "etc/pycadf/gnocchi_api_audit_map.conf",
    "etc/pycadf/heat_api_audit_map.conf",
    "etc/pycadf/ironic_api_audit_map.conf",
    "etc/pycadf/neutron_api_audit_map.conf",
    "etc/pycadf/nova_api_audit_map.conf",
    "etc/pycadf/trove_api_audit_map.conf",
    "etc/pycadf/swift_api_audit_map.conf",
]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "preserve"
docstring-code-format = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "S", "U"]
ignore = [
    # we only use asserts for type narrowing
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"pycadf/tests/*" = ["S"]
