[metadata]
name = pycadf
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
summary = CADF Library
description-file =
    README.rst
home-page = https://docs.openstack.org/pycadf/latest/
classifier =
    Development Status :: 3 - Alpha
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    pycadf
data_files =
    etc/pycadf =
        etc/pycadf/cinder_api_audit_map.conf
        etc/pycadf/glance_api_audit_map.conf
        etc/pycadf/neutron_api_audit_map.conf
        etc/pycadf/nova_api_audit_map.conf
        etc/pycadf/trove_api_audit_map.conf
        etc/pycadf/ceilometer_api_audit_map.conf
        etc/pycadf/swift_api_audit_map.conf

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[pbr]
warnerrors = True
autodoc_tree_index_modules = True
autodoc_tree_root = ./pycadf
