[metadata]
name = pycadf
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
summary = CADF Library
description-file =
    README.rst
home-page = https://docs.openstack.org/pycadf/latest/
python-requires = >=3.9
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[files]
packages =
    pycadf
data_files =
    etc/pycadf =
        etc/pycadf/cinder_api_audit_map.conf
        etc/pycadf/glance_api_audit_map.conf
        etc/pycadf/neutron_api_audit_map.conf
        etc/pycadf/nova_api_audit_map.conf
        etc/pycadf/trove_api_audit_map.conf
        etc/pycadf/ceilometer_api_audit_map.conf
        etc/pycadf/swift_api_audit_map.conf
